cli/tests/testdata/run/error_015_dynamic_import_permissions.out
error: Uncaught (in promise) TypeError: Requires net access to "localhost:4545", run again with the --allow-net flag
    at file:///[WILDCARD]/error_015_dynamic_import_permissions.js:2:17
  await import("http://localhost:4545/subdir/mod4.js");
  ^
    at async file://[WILDCARD]/error_015_dynamic_import_permissions.js:2:3
